# Code-samples

./: README.md
AI/Path-finding/SM4K/FSM/Debug/: FSM.ilk
AI/Path-finding/SM4K/FSM/FSM/: FSM.vcxproj  FSM.vcxproj.filters  GraphAlgorithms.h  GraphEdgeTypes.h  GraphNodeTypes.h  Map4.txt  Model.h  Object.cpp  Object.h  SparseGraph.h  graphLoader.h  main.cpp  myWindow.cpp  myWindow.h
AI/Simple Settlers clone/SM4K/FSM/Debug/: FSM.ilk  fragmentShader.gsl  gliLog.txt  vertexShader.gsl
AI/Simple Settlers clone/SM4K/FSM/FSM/: AISystem.cpp  AISystem.h  Camera2D.cpp  Camera2D.h  FSM.vcxproj  FSM.vcxproj.filters  GameHandler.cpp  GameHandler.h  GraphAlgorithms.h  GraphNodeTypes.h  HiveMind.cpp  HiveMind.h  Model.cpp  Model.h  NodeTypeEnum.h  Object.cpp  Object.h  SettingsManager.cpp  SettingsManager.h  SettingsReader.cpp  SettingsReader.h  SparseGraph.h  State.h  StateMachine.h  TextureLoader.cpp  TextureLoader.h  Tile.cpp  Tile.h  TileHandler.cpp  TileHandler.h  TreeEntity.cpp  TreeEntity.h  Unit.cpp  Unit.h  UnitHandler.cpp  UnitHandler.h  UnitStates.cpp  UnitStates.h  entityManager.cpp  fragmentShader.gsl  (+12 more)
AI/Simple Settlers clone/SM4K/FSM/Release/: map2.txt
AI/State-machine/SM4K/FSM/Debug/: FSM.ilk
AI/State-machine/SM4K/FSM/FSM/: FSM.vcxproj  (+19 more)
Computer Graphics/Vertex-Animation/: README.md  lab-env-master.kdev4
Computer Graphics/Vertex-Animation/engine/render/: window.cc  window.h
Computer Graphics/Vertex-Animation/exts/: CMakeLists.txt
Computer Graphics/Vertex-Animation/exts/nuklear/: nuklear_glfw_gl3.h
Computer Graphics/Vertex-Animation/projects/CGLab/: Blinn-phong.frag  Blinn-phong.vert  CMakeLists.txt
Computer Graphics/Vertex-Animation/projects/CGLab/code/: CGLab.cc  CGlab.h
Computer Graphics/Vertex-Animation/projects/MathLib/: CMakeLists.txt
Computer Graphics/Vertex-Animation/projects/MathLib/code/: Animations.cpp  Animations.h  GraphicsNode.cpp  GraphicsNode.h  HalfEdgeMesh.cpp  HalfEdgeMesh.h  LightNode.cpp  LightNode.h  MeshResource.cpp  MeshResource.h  Rasterizer.cpp  Rasterizer.h  ShaderObject.cpp  ShaderObject.h  Skeleton.cpp  Skeleton.h  Skinning.cpp  Skinning.h  TextureResource.cpp  TextureResource.h  matrix3D.h  matrix4D.h  naxfileformatstructs.h  quaternions.h  vector2D.h  vector3D.h  vector4D.h
Computer Graphics/Vertex-Animation/projects/example/: CMakeLists.txt
Physics/Physics simulation/: CMakeLists.txt  README.md
Physics/Physics simulation/engine/: config.h
Physics/Physics simulation/projects/PhysLib/: CMakeLists.txt
Physics/Physics simulation/projects/PhysLib/code/: AABB.cpp  AABB.h  OABB.cpp  OABB.h  PhysicsDevice.cpp  PhysicsDevice.h  PhysicsNode.cpp  PhysicsNode.h  Plane.cpp  Plane.h  Ray.cpp  Ray.h  RigidBody.cpp  RigidBody.h
Physics/Physics simulation/projects/PhysicsLab/: Blinn-phong.vert  CMakeLists.txt
Physics/Physics simulation/projects/PhysicsLab/code/: exampleapp.cc  exampleapp.h  main.cc
(+29 files in other folders)
